--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,9 @@
 
 <body>
         <nav class="nav">
-            <img src="images/logo-1.png" alt="Bankist logo" class="nav__logo" id="logo" />
+            <a href="https://www.cableex.biz/" target="blank">
+                <img src="images/logo-1.png" alt="logo" class="nav__logo" id="logo"/>
+            </a>
             <button class="hamburger" id="hamburger">
                 <i class="fas fa-bars" style="font-size: 2rem;"></i>
             </button>
@@ -83,8 +85,8 @@
                 </div>
                 <div class="operations__content operations__content--1 operations__content--active">
                     <div class="operations__icon">
-                        <img src="images/4 Turret 4K Lazy.PNG" data-src="images/4 Turret 4K.PNG" alt="Computer"
-                        class="features__img lazy-img" />
+                        <img src="images/4 Turret 4K.PNG" alt="4turret"
+                        class="features__img" />
                     </div>
                     <h5 class="operations__header">
                         $419 + Professional Installation of $189 per camera (Mention CABLEEX15 and receive 15% off installation)
@@ -117,8 +119,8 @@
                 </div>
                 <div class="operations__content operations__content--2">
                     <div class="operations__icon">
-                        <img src="images/6 Turret 4K Lazy.PNG" data-src="images/6 Turret 4K.PNG" alt="Credit card"
-                        class="features__img lazy-img" />
+                        <img src="images/6 Turret 4K.PNG" alt="6turret"
+                        class="features__img" />
                     </div>
                     <h5 class="operations__header">
                         $599 + Professional Installation of $189 per camera (Mention CABLEEX15 and receive 15% off installation)
@@ -151,8 +153,8 @@
                 </div>
                 <div class="operations__content operations__content--3">
                     <div class="operations__icon">
-                        <img src="images/4 Wi-Fi Bullets Lazy.PNG" data-src="images/4 Wi-Fi Bullets.PNG" alt="Plant"
-                        class="features__img lazy-img" />
+                        <img src="images/4 Wi-Fi Bullets.PNG" alt="wifi-bullets"
+                        class="features__img" />
                     </div>
                     <h5 class="operations__header">
                         $499 + Professional Installation of $189 per camera (Mention CABLEEX15 and receive 15% off installation) 
@@ -183,8 +185,8 @@
                 </div>
                 <div class="operations__content operations__content--4">
                     <div class="operations__doorbell">
-                        <img src="images/HikVision Door Bell.PNG" data-src="images/HikVision Door Bell.PNG" alt="Plant"
-                        class="features__img lazy-img" />
+                        <img src="images/HikVision Door Bell.PNG"  alt="doorbelll"
+                        class="features__img" />
                     </div>
                     <h5 class="operations__header__doorbell">
                         $149 + Professional Installation of $189 (Mention CABLEEX15 and receive 15% off installation) 
@@ -213,8 +215,8 @@
                 </div>
                 <div class="operations__content operations__content--5">
                     <div class="operations__doorbell">
-                        <img src="images/logo-1.png" data-src="images/logo-1.png" alt="Plant"
-                        class="features__img lazy-img" />
+                        <img src="images/logo-1.png"  alt="logo"
+                        class="features__img" />
                     </div>
                     <h5 class="operations__header__doorbell">
                         Bring your own device. $199 professional installation cost per camera. When you mention coupon code CABLEEX10 you will receive 10% off your total install cost.
@@ -236,8 +238,8 @@
             </div>
 
             <div class="features">
-                    <img src="images/diagram.png" data-src="images/diagram.png" alt="diagram"
-                    class="features__img lazy-img" />
+                    <img src="images/diagram.png" alt="diagram"
+                    class="features__img" />
                     <div class="features__feature">
                         <div class="features__icon">
                             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M18 24h-12c-1.104 0-2-.896-2-2v-20c0-1.104.896-2 2-2h12c1.104 0 2 .896 2 2v20c0 1.104-.896 2-2 2zm1-5.083h-14v3.083c0 .552.449 1 1 1h12c.552 0 1-.448 1-1v-3.083zm-7 3c-.553 0-1-.448-1-1s.447-1 1-1c.552 0 .999.448.999 1s-.447 1-.999 1zm7-17h-14v13h14v-13zm-1-3.917h-12c-.551 0-1 .449-1 1v1.917h14v-1.917c0-.551-.448-1-1-1zm-4.5 1.917h-3c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h3c.276 0 .5.224.5.5s-.224.5-.5.5z"/></svg>
@@ -257,7 +259,7 @@
             <div class="section__title section__title--testimonials">
                 <h2 class="section__description">Not sure yet?</h2>
                 <h3 class="section__header">
-                    Thousands of businessess are already making their lifes simpler.
+                    See our reviews on Google! We pride ourselves on doing things right and professionalism.
                 </h3>
             </div>
             <div data-romw-token="DFGIe1enlE85kiXzNosp6J4oHHgWRaSLo4zW0EF3U7lkzyeMUg"></div>
@@ -279,9 +281,9 @@
 
 
     <footer class="footer">
-        <ul class="footer__nav">
-        </ul>
-        <img src="images/logo-1.png" alt="Logo" class="footer__logo" />
+        <a href="https://www.cableex.biz/" target="blank">
+            <img src="images/logo-1.png" alt="Logo" class="footer__logo" />
+        </a>
     </footer>
 
     <div class="modal hidden">
