Added google analytics script

--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,13 @@
     <script defer src="./../script.js"></script>
     <script src="https://reviewsonmywebsite.com/js/v2/embed.js?id=c338ae55b38e487f19ae" type="text/javascript"></script>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+    <script defer async src="https://www.googletagmanager.com/gtag/js?id=UA-189523347-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-189523347-1');
+    </script>
 </head>
 
 <body>
